menambahkan folder hasil build

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ npm-debug.log*
 # Dependency directories
 node_modules/
 
-# Optional npm cache directory
-.npm
+# # Optional npm cache directory
+# .npm
 
-### Additional directories
-dist
+# ### Additional directories
+# dist
